--- a/styles/media.css
+++ b/styles/media.css
@@ -20,9 +20,12 @@
         font-size: 12px !important;
 
     }
+    .palleteContainer{
+        width: 75%;
+    }
     
 }
-@media screen and (max-width: 600px) and (min-width:351px) 
+@media screen and (max-width: 700px) and (min-width:351px) 
 {
     body{
         
@@ -38,7 +41,10 @@
 
         font-size: 14px !important;
     }
-
+    .palleteContainer{
+        width: 75%;
+    }
+    
     .icon{
         font-size: 18px !important;
         
